# q-emplois

./: .dockerignore  .env.example  .gitignore  BETA_LAUNCH_STRATEGY.md  BOOTSTRAP_FREE_PLAN.md  DESIGN.md  Dockerfile  EXPENSES_BREAKDOWN.md  IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  LandingPage.old.tsx  LandingPage.utf8.tsx  QUEBEC_TASK_CATEGORIES.md  README.md  SEO_KEYWORDS.md  TESTING.md  create-files.sh  deploy-railway.sh  docker-compose.yml  fix.js  fix2.js  i18n.ts  middleware.ts  package-lock.json  package.json  railway.json  render.yaml  reposition.js  requirements.txt  server.js  temp.tsx
.github/: dependabot.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  nixpacks.toml  package-lock.json  package.json  railway.toml
components/: CookieConsent.tsx  Footer.tsx  Navigation.tsx
docs/: DEPLOY.md  HANDOFF.md  LIVRE-BLANC.md  PAYMENT_POLICY.md  RAILWAY_RESTORE.md  USER_JOURNEY.md  WHITEPAPER.md  authentication.md  booking_flow.md  datadog-saved-views.md  traction-summary.md  tradesmen_portal.md
frontend/: .env.example  .env.production  .env.sentry.example  index.html  package-lock.json  package.json  tailwind.config.js
locales/: en.json  fr.json
messages/: en.json  fr.json
scripts/: railway-api.mjs  railway-fix-start.mjs  railway-introspect-vars.mjs  railway-introspect.mjs  railway-login.ps1  railway-mutations.mjs  railway-vars.mjs  render-setup-env.mjs  set-cors.mjs  setup-production.ps1  test-db-url.mjs  test-stripe-e2e.sh
tests/: __init__.py  (+1 more)
tools/rbq_verifier/: .env.example  README.md  pyproject.toml  rbq_verify.py
(+259 files in other folders)
